Changed header format and UI *in progress*

--- a/index.html
+++ b/index.html
@@ -15,17 +15,45 @@
 
 <body>
   <div id="top">
+    <div class="topBlock">
+      <div class="dropdown" id="themeDD">
+        <button class="dropdownBtn"></button>
+        <div class="dropdownContent roboto normal">
+          <button onclick="colorScheme.systemMode()">System</button>
+          <button onclick="colorScheme.lightMode()">Light</button>
+          <button onclick="colorScheme.darkMode()">Dark</button>
+        </div>
+      </div>
+      <div class="dropdown" id="themeDD">
+        <button class="dropdownBtn"></button>
+        <div class="dropdownContent roboto normal">
+          <button onclick="colorScheme.systemMode()">System</button>
+          <button onclick="colorScheme.lightMode()">Light</button>
+          <button onclick="colorScheme.darkMode()">Dark</button>
+        </div>
+      </div>
+    </div>
     <div id="topText">
       <h1 class="roboto bold">Sequence</h1>
       <h2 class="roboto light">Moves: <span class="roboto bold" id="numMoves">0</span></h2>
       <h2 class="roboto light">Correct: <span class="roboto bold" id="numCorrect">0</span></h2>
     </div>
-    <div class="dropdown" id="themeDD">
-      <button class="dropdownBtn"></button>
-      <div class="dropdownContent roboto normal">
-        <button onclick="colorScheme.systemMode()">System</button>
-        <button onclick="colorScheme.lightMode()">Light</button>
-        <button onclick="colorScheme.darkMode()">Dark</button>
+    <div class="topBlock">
+      <div class="dropdown" id="themeDD">
+        <button class="dropdownBtn"></button>
+        <div class="dropdownContent roboto normal">
+          <button onclick="colorScheme.systemMode()">System</button>
+          <button onclick="colorScheme.lightMode()">Light</button>
+          <button onclick="colorScheme.darkMode()">Dark</button>
+        </div>
+      </div>
+      <div class="dropdown" id="themeDD">
+        <button class="dropdownBtn"></button>
+        <div class="dropdownContent roboto normal">
+          <button onclick="colorScheme.systemMode()">System</button>
+          <button onclick="colorScheme.lightMode()">Light</button>
+          <button onclick="colorScheme.darkMode()">Dark</button>
+        </div>
       </div>
     </div>
   </div>
